# bramankp

cmake/: CMakeLists.txt
cmake/functions/: CMakeLists.txt
cmake/functions/source/: CMakeLists.txt  main.c
cmake/functions/source/libsomething/: CMakeLists.txt  something.c  something.h
cmake/libraries/src/: CMakeLists.txt  main.cpp
cmake/libraries/src/functional/: Functional.hpp
cmake/libraries/src/prebuilt/: CMakeLists.txt  Prebuilt.cpp  Prebuilt.hpp  build.sh
cmake/libraries/src/utility/: Utility.cpp  Utility.hpp
cmake/src/: CMakeLists.txt
cmake/src/functional/: CMakeLists.txt  Functional.cpp
cmake/src/utility/: CMakeLists.txt
cmake/targets/: CMakeLists.txt  build.sh  gtam.cmake  gtlt.cmake
cmake/threads/: CMakeLists.txt  main.cpp
cmake/version-checking/: CMakeLists.txt  one.c  three.c  two.c
code/broadcast/: broadcast-client.c  broadcast-server.c
code/countprintables/: countprintables.cpp
code/libsndfile/: build.sh  wav2pcm16k.c  wav2pcm48k.c
code/mbo/: config.txt  config.xml  crc32  credentials.txt  init.json  response.json
code/mwcf/: commands.txt  init.xml
code/sfp/: build.sh  sfptest.c
code/ueg/: build.sh  oldnewbuild.sh  sources.sh  uegnano.c  uegtest.c
code/watermarks-nano/: build.sh  mixfiles.c  sources.sh  watermarks-mono.c  watermarks-stereo.c
gitlab-runner/: configure-and-run.txt
random/: values.yaml  wget.sh
ubuntu/: .bashrc  .nanorc  .okta_aws_login_config  .vimrc  packages  packages.vbox
vscode/: settings.json
windows/terminal/: settings.json
